shared/flutter/user/src/common.h

#ifndef COMMON_H
#define COMMON_H

typedef unsigned char BOOL;
extern const BOOL TRUE;
extern const BOOL FALSE;

#endif